tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_enum_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Option<T> { Some(T), None }
let foo = (o: Option<Integer>): Option<String> =>
  switch o {
    case Some(1): Some("hi")
    case Some(_): Some("lol")
    case Some(_): None // This case is unreachable
    case None: None
  }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_enum_1.kk:6:10
  │
6 │     case Some(_): None // This case is unreachable
  │          ^^^^^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
